# stm32l4-test

./: Cargo.toml  memory.x  upload.sh
.cargo/: config
src/: main.rs
